objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>ReadOnly SalesProcess</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>AUM Verified</fullName>
        </values>
        <values>
            <fullName>FINRA Effective</fullName>
        </values>
        <values>
            <fullName>GDC Verified</fullName>
        </values>
        <values>
            <fullName>None</fullName>
        </values>
        <values>
            <fullName>Offer Accepted</fullName>
        </values>
        <values>
            <fullName>Offer Declined</fullName>
        </values>
        <values>
            <fullName>Offer Letter Sent</fullName>
        </values>
        <values>
            <fullName>Prelim Approved</fullName>
        </values>
        <values>
            <fullName>Prelim HOLD</fullName>
        </values>
        <values>
            <fullName>Prelim Normal Processing</fullName>
        </values>
        <values>
            <fullName>Prelim Received</fullName>
        </values>
        <values>
            <fullName>Prelim Sent</fullName>
        </values>
        <values>
            <fullName>Proof of Production</fullName>
        </values>
        <values>
            <fullName>Recruitment Kit</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard SalesProcess</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>AUM Verified</fullName>
        </values>
        <values>
            <fullName>FINRA Effective</fullName>
        </values>
        <values>
            <fullName>GDC Verified</fullName>
        </values>
        <values>
            <fullName>None</fullName>
        </values>
        <values>
            <fullName>Offer Accepted</fullName>
        </values>
        <values>
            <fullName>Offer Declined</fullName>
        </values>
        <values>
            <fullName>Offer Letter Sent</fullName>
        </values>
        <values>
            <fullName>Prelim Approved</fullName>
        </values>
        <values>
            <fullName>Prelim HOLD</fullName>
        </values>
        <values>
            <fullName>Prelim Normal Processing</fullName>
        </values>
        <values>
            <fullName>Prelim Received</fullName>
        </values>
        <values>
            <fullName>Prelim Sent</fullName>
        </values>
        <values>
            <fullName>Proof of Production</fullName>
        </values>
        <values>
            <fullName>Recruitment Kit</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_GDC__c</fullName>
        <label>Actual GDC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Under_Management__c</fullName>
        <label>Assets Under Management</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Clearing_Firm_Package_Appr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clearing Firm Package Appr.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clearing_Firm_Package_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clearing Firm Package Req.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactJobTitile__c</fullName>
        <formula>TEXT( Contact__r.Job_Title__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactJobTitile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Prospect</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sales_Cycle__c</fullName>
        <formula>(TODAY()- DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Sales Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_TFR_Send_to_FP__c</fullName>
        <label>Date TFR Sent to FP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_as_Prospect_until_App_Approved__c</fullName>
        <formula>IF(NOT(ISNULL(Prelim_App_Approved_Entered_Date__c)), 
   Prelim_App_Approved_Entered_Date__c -  DATEVALUE( CreatedDate ),
   0
)</formula>
        <label># Days as Prospect until App Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_as_Prospect_until_App_Submitted__c</fullName>
        <formula>IF(NOT(ISNULL( Prelim_App_Sent_Entered_Date__c )),
Prelim_App_Sent_Entered_Date__c - DATEVALUE( CreatedDate ),
0
)</formula>
        <label># Days as Prospect until App Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_for_FINRA_Effective__c</fullName>
        <formula>FINRA_Effective_Date__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days for FINRA Effective</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Stage_None__c</fullName>
        <description>Created for Weighted Pipeline Report</description>
        <formula>IF(ISNULL(None__c), Null,IF( NOT(ISNULL( Contact__r.Recruitment_Kit__c )),Contact__r.Recruitment_Kit__c-None__c,IF(NOT(ISNULL(  Preliminary_App_Sent__c)),Preliminary_App_Sent__c-None__c,IF(NOT(ISNULL(Closed_Date__c))&amp;&amp; (Closed_Date__c-None__c) &gt; 0,Closed_Date__c-None__c,(TODAY()-None__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days in Stage: None</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Stage_Offer_Accepted__c</fullName>
        <description>Created for Weighted Pipeline Report</description>
        <formula>IF(ISNULL(Offer_Accepted__c),Null,IF(NOT(ISNULL( FINRA_Effective_Date__c )),FINRA_Effective_Date__c-Offer_Accepted__c,IF(NOT(ISNULL( Closed_Date__c ))&amp;&amp;(Closed_Date__c-Offer_Accepted__c) &gt; 0,Closed_Date__c-Offer_Accepted__c,(TODAY()-Offer_Accepted__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days in Stage: Offer Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Stage_Offer_Declined__c</fullName>
        <description>Created for Weighted Pipeline Report</description>
        <formula>IF(ISNULL(Offer_Declined__c),Null,IF(NOT(ISNULL( FINRA_Effective_Date__c )),FINRA_Effective_Date__c-Offer_Declined__c,IF(NOT(ISNULL( Closed_Date__c ))&amp;&amp; (Closed_Date__c-Offer_Declined__c) &gt; 0,Closed_Date__c-Offer_Declined__c,(TODAY()-Offer_Declined__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days in Stage: Offer Declined</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Stage_Offer_Sent__c</fullName>
        <description>Created for Weighted Pipeline Report</description>
        <formula>IF(ISNULL(Offer_Letter_Sent__c),Null,IF(NOT(ISNULL( Offer_Accepted__c )), Offer_Accepted__c -Offer_Letter_Sent__c,(IF(NOT(ISNULL(Offer_Declined__c )),Offer_Declined__c -Offer_Letter_Sent__c,IF(NOT(ISNULL(Closed_Date__c))&amp;&amp; (Closed_Date__c-Offer_Letter_Sent__c) &gt; 0,Closed_Date__c-Offer_Letter_Sent__c,(TODAY()-Offer_Letter_Sent__c))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days in Stage: Offer Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Stage_Prelim_Approved__c</fullName>
        <description>Created for Weighted Pipeline Report</description>
        <formula>IF(ISNULL(Prelim_App_Approved__c),Null,IF(NOT(ISNULL( Offer_Letter_Sent__c )), Offer_Letter_Sent__c -Prelim_App_Approved__c,IF(NOT(ISNULL(Closed_Date__c))&amp;&amp; (Closed_Date__c-Prelim_App_Approved__c) &gt; 0,Closed_Date__c-Prelim_App_Approved__c,(TODAY()-Prelim_App_Approved__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days in Stage: Prelim Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Stage_Prelim_Received__c</fullName>
        <description>Created for Weighted Pipeline Report</description>
        <formula>IF(ISNULL(Preliminary_App_Received__c),Null,IF(NOT(ISNULL(  Prelim_App_Approved__c )),Prelim_App_Approved__c-Preliminary_App_Received__c,IF(NOT(ISNULL(Closed_Date__c))&amp;&amp; (Closed_Date__c-Preliminary_App_Received__c) &gt; 0,Closed_Date__c-Preliminary_App_Received__c,(TODAY()-Preliminary_App_Received__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days in Stage: Prelim Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Stage_Prelim_Sent__c</fullName>
        <description>Created for Weighted Pipeline Report</description>
        <formula>IF(ISNULL(Preliminary_App_Sent__c),Null,IF(NOT(ISNULL(  Preliminary_App_Received__c )),Preliminary_App_Received__c-Preliminary_App_Sent__c,IF(NOT(ISNULL(Closed_Date__c))&amp;&amp; (Closed_Date__c-Preliminary_App_Sent__c) &gt; 0,Closed_Date__c-Preliminary_App_Sent__c,(TODAY()-Preliminary_App_Sent__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days in Stage: Prelim Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email1__c</fullName>
        <description>Email1</description>
        <label>Transition Communication Participant</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <description>Email2</description>
        <label>Transition Communication Participant</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email3__c</fullName>
        <description>Email3</description>
        <label>Transition Communication Participant</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Est_Transition_Date__c</fullName>
        <label>Est. Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Sales_Cycle__c</fullName>
        <formula>(CloseDate- DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Sales Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINRA_Effective_Date__c</fullName>
        <label>FINRA Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Based_Pct__c</fullName>
        <label>Fee Based %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fee_Waivers_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Waivers Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_Count__c</fullName>
        <label>Head Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Notification_of_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Notification of Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Source__c</fullName>
        <label>Income Source</label>
        <picklist>
            <picklistValues>
                <fullName>Fee Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee &amp; Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee, Commission, &amp; Fixed Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initiate_Transition_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Initiate Transition Communication</description>
        <label>Initiate Transition Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initiate_Transition_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initiate Transition Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_4_Digits_SSN__c</fullName>
        <label>Last 4-Digits SSN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Sub_Type__c</fullName>
        <label>Lead Source Sub-Type</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Internal Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Recruiting Visit/Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBD RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JoinLFN.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JoinLFN #</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Life_GDC__c</fullName>
        <label>Life GDC $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Life_Premier_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Life Premier Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Approved__c</fullName>
        <label>Loan Amount Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Requested__c</fullName>
        <label>Loan Amount Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>None__c</fullName>
        <label>None</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Normal_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Normal Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSJ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Accepted__c</fullName>
        <label>Offer Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Declined__c</fullName>
        <label>Offer Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Sent__c</fullName>
        <label>Offer Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Affiliation__c</fullName>
        <label>Opportunity Affiliation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpptyAffiliationFormula__c</fullName>
        <description>Pull contact.affiliation field into opportunity</description>
        <formula>IF( ISBLANK(Opportunity_Affiliation__c) ,  TEXT( Contact__r.Affiliation__c ), Opportunity_Affiliation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pull contact affiliation field into opportunity</inlineHelpText>
        <label>OpptyAffiliationFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptyAffiliation__c</fullName>
        <description>Field update by batch job from OpptyAffiliationFormula field value.</description>
        <label>OptyAffiliation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payout_Approved__c</fullName>
        <label>Payout Approved</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payout_Requested__c</fullName>
        <label>Payout Requested</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prelim_App_Approved_Entered_Date__c</fullName>
        <description>Date when “Preliminary App Approved” date was entered</description>
        <label>Prelim App Approved Entered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prelim_App_Approved__c</fullName>
        <label>Prelim. App Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prelim_App_Sent_Entered_Date__c</fullName>
        <description>Day when Preliminary App Sent” date was entered</description>
        <label>Prelim App Sent Entered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preliminary_App_Received__c</fullName>
        <label>Prelim. App Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preliminary_App_Sent__c</fullName>
        <label>Prelim. App Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premier_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premier Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promissory_Note_Req__c</fullName>
        <label>Promissory Note Req.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promissory_Note_Sent__c</fullName>
        <label>Promissory Note Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promissory_Note_Sent_to_Finance__c</fullName>
        <label>Promissory Note Sent to Finance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proof_of_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof of Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified_Loan_Amount__c</fullName>
        <label>Qualified Loan GDC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIA__c</fullName>
        <label>RIA</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Closure__c</fullName>
        <label>Reason for Closure</label>
        <picklist>
            <picklistValues>
                <fullName>Recruit Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed by Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied by Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied by Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested by Advisor Recruitment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Hold__c</fullName>
        <label>Reason for Hold</label>
        <picklist>
            <picklistValues>
                <fullName>Recruiter Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Examination Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Information Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rep_Referral_Form_Rec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rep Referral Form Rec.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_To_HO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting To HO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_To_OSJ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting To OSJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requesting_Fee_Waivers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requesting Fee Waivers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TFR_Received__c</fullName>
        <label>TFR Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TFR_Review_Complete__c</fullName>
        <label>TFR Review Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transition_Checklist_Provided_Date__c</fullName>
        <label>Transition Checklist Provided Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Consultant__c</fullName>
        <label>Transition Consultant</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transition_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Transition Opt Out</description>
        <label>Transition Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transition_Planning_Call_Date__c</fullName>
        <label>Transition Planning Call Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All_Converted_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Conversion__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Converted Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact__c</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Jennifer_Stone</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Stone</value>
        </filters>
        <label>Jennifer Stone</label>
        <sharedTo>
            <roleAndSubordinates>Transition</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Team</filterScope>
        <label>My Team Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Mine</filterScope>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Standard_Opportunity</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Standard_Opportunity</value>
        </filters>
        <label>Standard Opportunity</label>
    </listViews>
    <listViews>
        <fullName>Tom_Labrie_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Labrie</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>FINRA Effective,Closed</value>
        </filters>
        <label>Tom Labrie Opportunities</label>
        <sharedTo>
            <roleAndSubordinates>Managing_Principal_Northeast</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>ReadOnly_Opportunity</fullName>
        <active>true</active>
        <businessProcess>ReadOnly SalesProcess</businessProcess>
        <description>Creating task for a Opportunity depending upon Opportunity stage - Automatic process</description>
        <label>ReadOnly Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Standard SalesProcess</businessProcess>
        <description>Creating task for a Opportunity depending upon Opportunity stage - Automatic process</description>
        <label>Standard Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ClosedDateAndFINRADateBothCanNotExists</fullName>
        <active>true</active>
        <description>ClosedDateAndFINRADateBothCanNotExists</description>
        <errorConditionFormula>NOT(ISBLANK(  Closed_Date__c ))  &amp;&amp;   NOT(ISBLANK(   FINRA_Effective_Date__c  ))</errorConditionFormula>
        <errorMessage>Closed Date and  FINRA Date  both can not contain values at the same time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LeadSourceDetail_ReadOnly</fullName>
        <active>false</active>
        <description>Based on LeadSource Picklist value leadSourceDetail text field Should be Read Only.</description>
        <errorConditionFormula>AND(
NOT(OR(
ISPICKVAL( LeadSource , &quot;Third Party Recruiter&quot;),
ISPICKVAL( LeadSource , &quot;Industry Event&quot;),
ISPICKVAL( LeadSource , &quot;RR Referral&quot;), 
ISPICKVAL(LeadSource,&quot;COI&quot;)
)
),
NOT(ISBLANK(Lead_Source_Detail__c )))
&amp;&amp; $Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>Lead_Source_Detail__c</errorDisplayField>
        <errorMessage>Please clear Lead Source detail which is required only for the Lead Source of &apos;Third Part Recruiter&apos;,&apos;Industry Event&apos; and &apos;COI&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LeadSourceDetail_Required</fullName>
        <active>false</active>
        <description>Based on LeadSource Picklist value leadSourceDetail text field Should be enter.</description>
        <errorConditionFormula>AND(OR(
ISPICKVAL( LeadSource , &quot;Third Party Recruiter&quot;),
ISPICKVAL( LeadSource , &quot;Industry Event&quot;),
ISPICKVAL( LeadSource , &quot;RR Referral&quot;), 
ISPICKVAL(LeadSource,&quot;COI&quot;) 
) , 
ISBLANK(Lead_Source_Detail__c ))
&amp;&amp; $Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>Lead_Source_Detail__c</errorDisplayField>
        <errorMessage>Lead Source Detail is required for Lead Source of &apos;Third Part Recruiter&apos;,&apos;Industry Event&apos; and &apos;COI&apos;</errorMessage>
    </validationRules>
</CustomObject>